<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/dog" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/blue_baby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/icon"
        android:layout_width="121dp"
        android:layout_height="77dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/slogan_p1"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_slogan_p1"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@id/icon"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/slogan_p2"
        android:layout_width="76dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_slogan_p2"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@id/slogan_p1"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_welcome"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="225dp"
                android:layout_height="46dp"
                android:layout_marginBottom="5dp"
                android:text="@string/app_welcome"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/editText_email"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_email"
                android:hint="@string/app_email"
                android:inputType="textEmailAddress"
                android:paddingVertical="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/editText_password"

                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_password"
                android:hint="@string/app_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:paddingVertical="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/button_login"


                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/bg_button_normal"
                android:text="@string/app_login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/textView_forgot_password"


                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="160dp"
                android:layout_marginBottom="36dp"
                android:text="@string/app_forgot_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"


                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:layout_marginBottom="36dp"
                android:text="@string/app_register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"


                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>