<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/dog" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/blue_baby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/icon"
        android:layout_width="121dp"
        android:layout_height="77dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

    <TextView
        android:id="@+id/slogan_p1"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_slogan_p1"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@id/icon"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/slogan_p2"
        android:layout_width="76dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_slogan_p2"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@id/slogan_p1"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_name_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_name"
                android:drawableTint="@color/black"
                android:hint="@string/text_name"
                android:textSize="18dp"
                android:inputType="textPersonName"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@id/editText_tel_register"

                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_tel_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_tel"
                android:drawableTint="@color/black"
                android:hint="@string/text_tel"
                android:textSize="18dp"
                android:inputType="phone"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@id/editText_email_register"

                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_email_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_email"
                android:drawableTint="@color/black"
                android:hint="@string/app_email"
                android:textSize="18dp"
                android:inputType="textEmailAddress"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@id/editText_password_register"

                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_password_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_password"
                android:drawableTint="@color/black"
                android:hint="@string/app_password"
                android:textSize="18dp"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@id/progressBarRegister"

                />

            <ProgressBar
                android:id="@+id/progressBarRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/button_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_normal"
                android:letterSpacing="0.04"
                android:text="@string/app_register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/progressBarRegister"


                tools:layout_editor_absoluteX="19dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>